<resources>
    <string name="app_name">ProjetDevAndroid</string>
    <string name="tool_bar_label">Mon application</string>
    <string name="open_drawer">Ouvrir menu</string>
    <string name="close_drawer">fermer menu</string>
    <string name="accueil">Accueil</string>
    <string name="carte">Carte</string>
    <string name="camera">Caméra</string>
    <string name="parametres">Paramètres</string>
    <string name="drawer_open">ouvrir menu</string>
    <string name="drawer_close">fermer menu</string>
    <string name="geolocate">Geolocalisation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo">Photo</string>
    <string name="SQLite">SQLite</string>
    <string name="add_person">Ajouter une personne</string>
    <string name="name">Nom</string>
    <string name="age">Âge</string>
    <string name="add">Ajouter</string>
    <string name="change_language">Changer langue</string>
    <string name="choose_language">Choisir une langue</string>
    <string name="meteo">Meteo</string>
    <string name="cancel">Annuler</string>
    <string name="extrenalBD">BD Externe</string>

</resources>