<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_home"
        android:title="@string/accueil"/>
    <item
        android:id="@+id/nav_geolocate"
        android:title="@string/geolocate"/>

    <item
        android:id="@+id/nav_camera"
        android:title="@string/camera"/>


    <item
        android:id="@+id/action_language"
        android:title="@string/change_language"
        app:showAsAction="always"/>

    <item
        android:id="@+id/nav_person"
        android:title="@string/SQLite"/>

    <item

        android:id="@+id/nav_weather"
        android:title="@string/meteo" />
  
    <item
        android:id="@+id/nav_external_bd"
        android:title="@string/extrenalBD"/>


</menu>